; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_dotlock.c_dot_unlock.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_dotlock.c_dot_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXPATHLEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"%s.lock\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dot_unlock(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i32, i32* @MAXPATHLEN, align 4
  %6 = zext i32 %5 to i64
  %7 = call i8* @llvm.stacksave()
  store i8* %7, i8** %3, align 8
  %8 = alloca i8, i64 %6, align 16
  store i64 %6, i64* %4, align 8
  %9 = trunc i64 %6 to i32
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @snprintf(i8* %8, i32 %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = call i32 @unlink(i8* %8)
  %13 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %13)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #2

declare dso_local i32 @unlink(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
